--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <title> AirBnB Clone </title>
         <link rel="icon" type="icon/x-icon" href="images/favicon-airbnb.png">
-        <link rel="stylesheet" href="style/2-common.css">
-        <link rel="stylesheet" href="style/2-header.css">
-        <link rel="stylesheet" href="style/2-footer.css">
+        <link rel="stylesheet" href="styles/2-common.css">
+        <link rel="stylesheet" href="styles/2-header.css">
+        <link rel="stylesheet" href="styles/2-footer.css">
     </head>
     <body>
         <header></header>
