--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <meta charset="utf-8">
     <title>AirBnB Clone</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon-airbnb.png">
+    <link rel="icon" type="image/x-icon" href="images/icon.png">
     <body style="margin: 0; padding: 0;">
         <header style="background-color: #ff0000; height: 70px; width: 100%;">
         </header>
