--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> AirBnB Clone </title>
-        <link rel="icon" type="icon/x-icon" href="images/favicon-airbnb.png">
+        <link rel="icon" type="icon/x-icon" href="images/icon.png">
         <style>
             body {
                 margin: 0;
