--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> AirBnB Clone </title>
-        <link rel="icon" type="icon/x-icon" href="images/favicon-airbnb.png">
+        <link rel="icon" type="icon/x-icon" href="images/icon.png">
         <link rel="stylesheet" href="styles/2-common.css">
         <link rel="stylesheet" href="styles/2-header.css">
         <link rel="stylesheet" href="styles/2-footer.css">
