--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> AirBnB Clone </title>
-        <link rel="icon" type="icon/x-icon" href="images/favicon-airbnb.png">
-        <link rel="icon" href="images/logo.png">
+        <link rel="icon" type="icon/x-icon" href="images/logo.png">
         <link rel="stylesheet" href="styles/3-common.css">
         <link rel="stylesheet" href="styles/3-header.css">
         <link rel="stylesheet" href="styles/3-footer.css">
