--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="fr">
-    <meta charset="utf-8">
-    <title>AirBnB Clone</title>
-    <link rel="icon" type="image/x-icon" href="images/icon.png">
-    <body style="margin: 0; padding: 0;">
-        <header style="background-color: #ff0000; height: 70px; width: 100%;">
-        </header>
-        <footer style="background-color: #00ff00; height: 60px; width: 100%; display: flex; position: absolute; bottom: 0; justify-content: center; align-items: center;">
-            Best School
-        </footer>
-    </body>
+<html lang="en">
+<meta charset="utf-8">
+<title>AirBnB Clone</title>
+<link rel="icon" href="images/icon.png">
+
+<body style="margin: 0; padding: 0;">
+    <header style="background-color: #f00; height: 70px; width: 100%;">
+    </header>
+    <footer style="align-items: center; background-color: #0f0; bottom: 0; display: flex; height: 60px; justify-content: center; position: absolute; width: 100%;">
+        Best School
+    </footer>
+</body>
+
 </html>
