--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
-<html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title> AirBnB Clone </title>
-        <link rel="icon" type="icon/x-icon" href="images/icon.png">
-        <style>
-            body {
-                margin: 0;
-                padding: 0;
-            }
-            header {
-                background-color: #ff0000;
-                height: 70px;
-                width: 100%;
-            }
-            footer {
-                background-color: #00ff00;
-                height: 60px;
-                width: 100%;
-                justify-content: center;
-                align-items: center;
-                position: absolute;
-                display: flex;
-                bottom: 0;
-            }
+<html lang="en">
 
-        </style>
-    </head>
-    <body>
-        <header></header>
-        <footer>
-            Best School
-        </footer>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>AirBnB Clone</title>
+    <link rel="icon" href="images/icon.png">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background: #f00;
+            height: 70px;
+            width: 100%;
+        }
+
+        footer {
+            align-items: center;
+            background-color: #0f0;
+            bottom: 0;
+            display: flex;
+            height: 60px;
+            justify-content: center;
+            position: absolute;
+            width: 100%;
+        }
+    </style>
+</head>
+
+<body>
+    <header></header>
+    <footer>
+        Best School
+    </footer>
+</body>
+
 </html>
