--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title> AirBnB Clone </title>
-        <link rel="icon" type="icon/x-icon" href="images/icon.png">
-        <link rel="stylesheet" href="styles/2-common.css">
-        <link rel="stylesheet" href="styles/2-header.css">
-        <link rel="stylesheet" href="styles/2-footer.css">
-    </head>
-    <body>
-        <header></header>
-        <footer>
-            Best School
-        </footer>
-    </body>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>AirBnB Clone</title>
+    <link rel="icon" href="images/icon.png">
+    <link rel="stylesheet" href="styles/default.css">
+    <link rel="stylesheet" href="styles/2-common.css">
+    <link rel="stylesheet" href="styles/2-header.css">
+    <link rel="stylesheet" href="styles/2-footer.css">
+</head>
+
+<body>
+    <header></header>
+    <footer>
+        Best School
+    </footer>
+</body>
 </html>
