--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
-<html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title> AirBnB Clone </title>
-        <link rel="icon" type="icon/x-icon" href="images/logo.png">
-        <link rel="stylesheet" href="styles/3-footer.css">
-        <link rel="stylesheet" href="styles/3-header.css">
-        <link rel="stylesheet" href="styles/4-common.css">
-        <link rel="stylesheet" href="styles/4-filters.css">
+<html lang="en">
 
-    </head>
-    <body>
-        <header></header>
-        <div class="container">
-            <section class="filters">
-                <button>Search</button>
-            </section>
-        </div>
-        <footer>
-            Best School
-        </footer>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>AirBnB clone</title>
+    <link rel="icon" href="images/icon.png">
+    <link rel="stylesheet" href="styles/default.css">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/4-filters.css">
+    
+</head>
+<body>
+    <header></header>
+    <div class="container">
+        <section class="filters">
+            <button>Search</button>
+        </section>
+    </div>
+    <footer>
+        Best School
+    </footer>
+</body>
 </html>
