--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
-<html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <title> AirBnB Clone </title>
-        <link rel="icon" type="icon/x-icon" href="images/logo.png">
-        <link rel="stylesheet" href="styles/3-footer.css">
-        <link rel="stylesheet" href="styles/3-header.css">
-        <link rel="stylesheet" href="styles/4-common.css">
-        <link rel="stylesheet" href="styles/5-filters.css">
+<html lang="en">
 
-    </head>
-    <body>
-        <header></header>
-        <div class="container">
-            <section class="filters">
-                <div class="locations">
-                    <h3>States</h3>
-                    <h4>California, Arizona, Texas...</h4>
-                </div>
-                <div class="amenities">
-                    <h3>Amenities</h3>
-                    <h4>Laundry, Golf, Fishing....</h4>
-                </div>
-                <button>Search</button>
-            </section>
-        </div>
-        <footer>
-            Best School
-        </footer>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <title>AirBnB clone</title>
+  <link rel="icon" href="images/icon.png">
+  <link rel="stylesheet" href="styles/default.css">
+  <link rel="stylesheet" href="styles/4-common.css">
+  <link rel="stylesheet" href="styles/3-header.css">
+  <link rel="stylesheet" href="styles/3-footer.css">
+  <link rel="stylesheet" href="styles/5-filters.css">
+
+</head>
+<body>
+  <header></header>
+  <div class="container">
+    <section class="filters">
+      <div class="locations">
+        <h3>States</h3>
+        <h4>Kenya, Uganda, Tanzania...</h4>
+      </div>
+      <div class="amenities">
+        <h3>Amenities</h3>
+        <h4>Laundy, Swimming Pool, Golf...</h4>
+      </div>
+      <button>Search</button>
+    </section>
+  </div>
+  <footer>
+    Best School
+  </footer>
+</body>
+
 </html>
