--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -91,15 +91,15 @@
         <div class="amenities">
             <h2>Amenities</h2>
             <ul>
-              <li>
-                <p>None</p>
-              </li>
+              <li>Java House</li>
+              <li>Bar</li>
+              <li>Casino</li>
             </ul>
           </div>
   
           <div class="reviews">
             <h2>2 Reviews</h2>
-            <h3>From Lolkitor Mayek the 11th November 2023</h3>
+            <h3>From: Lolkitor Mayek<br>Date: 11th November 2023</h3>
             <ul>
               <li>
                 <p>
@@ -108,12 +108,12 @@
                 </p>
               </li>
             </ul>
-            <h3>From Ochieng Rambo 29th October 2023</h3>
+            <h3>From: Ochieng Rambo<br>Date: 29th October 2023</h3>
             <ul>
               <li>
                 <p>
-                  Omg I just love the smell of dino chicken nuggets. Reminds me
-                  of my childhood. Def will return!
+                  The host is very friendly and services are really good.
+                  Will definately come back!
                 </p>
               </li>
             </ul>
@@ -148,15 +148,15 @@
         <div class="amenities">
             <h2>Amenities</h2>
             <ul>
-              <li>
-                <p>None</p>
-              </li>
+              <li>Gym</li>
+              <li>Sauna</li>
+              <li>Theater</li>
             </ul>
           </div>
   
           <div class="reviews">
             <h2>2 Reviews</h2>
-            <h3>From Jane the February 26 2017</h3>
+            <h3>From: Tanui Kigen<br>Date: 19th October 2023</h3>
             <ul>
               <li>
                 <p>
@@ -165,7 +165,7 @@
                 </p>
               </li>
             </ul>
-            <h3>From Alexis the June 1 2018</h3>
+            <h3>From: Kioko Kaluki<br>Date: 9th November 2023</h3>
             <ul>
               <li>
                 <p>
@@ -197,25 +197,25 @@
           </div>
         </div>
         <div class="user">
-          <strong>Owner:</strong> Avocado &#38; Alpaca Spiritualist
+          <strong>Owner:</strong> Mtumishi Kainuke
         </div>
         <div class="description">
           Very clean,
-          Chef available
-          24/7 security
+          Chef available,
+          24/7 security.
         </div>
         <div class="amenities">
             <h2>Amenities</h2>
             <ul>
-              <li>
-                <p>None</p>
-              </li>
+              <li>Bar</li>
+              <li>Supermarket</li>
+              <li>KFC</li>
             </ul>
           </div>
   
           <div class="reviews">
             <h2>2 Reviews</h2>
-            <h3>From Jane the February 26 2017</h3>
+            <h3>From: Matayo Kigogo<br>Date:5th November 2023</h3>
             <ul>
               <li>
                 <p>
@@ -224,7 +224,7 @@
                 </p>
               </li>
             </ul>
-            <h3>From Alexis the June 1 2018</h3>
+            <h3>From: Saidimu Kenai<br>Date: 1st November 2023</h3>
             <ul>
               <li>
                 <p>
@@ -264,15 +264,14 @@
         <div class="amenities">
             <h2>Amenities</h2>
             <ul>
-              <li>
-                <p>None</p>
-              </li>
+              <li>Swimming Pool</li>
+              <li>Bar</li>
             </ul>
           </div>
   
           <div class="reviews">
             <h2>2 Reviews</h2>
-            <h3>From Jane the February 26 2017</h3>
+            <h3>From: Noni Mwangi<br>Date: 26th August 2023</h3>
             <ul>
               <li>
                 <p>
@@ -281,7 +280,7 @@
                 </p>
               </li>
             </ul>
-            <h3>From Alexis the June 1 2018</h3>
+            <h3>From: Kadzomba Mweu<br> Date:21st October 2023</h3>
             <ul>
               <li>
                 <p>
