--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -137,7 +137,7 @@
           </div>
         </div>
         <div class="user">
-          <strong>Owner:</strong> Avocado &#38; Alpaca Spiritualist
+          <strong>Owner:</strong> Mtumishi Kainuke
         </div>
         <div class="description">
           Very clean,
