--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -125,7 +125,7 @@
         <div class="information">
           <div class="max_guest">
             <i class="fa fa-users fa-3x" aria-hidden="true"></i>
-            <br>3 Guests
+            <br>3 Guests**6*3
           </div>
           <div class="number_rooms">
             <i class="fa fa-bed fa-3x" aria-hidden="true"></i>
