--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -13,7 +13,8 @@
     
 </head>
 <body>
-    <header></header>
+    <header>
+    </header>
     <div class="container">
         <section class="filters">
             <button>Search</button>
