--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -57,16 +57,19 @@
     <section class="places">
         <h1>Places</h1>
         <article>
-            <h2>Houses</h2>
+            <h2>Suite</h2>
         </article>
         <article>
-            <h2>Apartment</h2>
+            <h2>Apartments</h2>
         </article>
         <article>
-            <h2>Cottage</h2>
+            <h2>Cottages</h2>
         </article>
         <article>
-            <h2>Boat</h2>
+            <h2>Tree House</h2>
+        </article>
+        <article>
+          <h2>Lake House</h2>
         </article>
     </section>
   </div>
