--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles/3-header.css">
   <link rel="stylesheet" href="styles/3-footer.css">
   <link rel="stylesheet" href="styles/6-filters.css">
-  <link rel="stylesheet" href="styles/100-places.css">
+  <link rel="stylesheet" href="styles/101-places.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   
@@ -89,11 +89,20 @@
           Chef Available
         </div>
         <div class="amenities">
-            <h2>Amenities</h2>
+            <h2><b>Amenities</b></h2>
             <ul>
-              <li>Java House</li>
-              <li>Bar</li>
-              <li>Casino</li>
+              <li>
+                <i class="fa fa-gamepad" aria-hidden="true"></i>
+                <p>Video games</p>
+              </li>
+              <li>
+                <i class="fa fa-shower" aria-hidden="true"></i>
+                <p>Shower</p>
+              </li>
+              <li>
+                <i class="fa fa-tv" aria-hidden="true"></i>
+                <p>TV</p>
+              </li>
             </ul>
           </div>
   
@@ -146,11 +155,32 @@
           Near Game park
         </div>
         <div class="amenities">
-            <h2>Amenities</h2>
+            <h2><b>Amenities</b></h2>
             <ul>
-              <li>Gym</li>
-              <li>Sauna</li>
-              <li>Theater</li>
+              <li>
+                <i class="fa fa-wifi" aria-hidden="true"></i>
+                <p>Wifi</p>
+              </li>
+              <li>
+                <i class="fa fa-gamepad" aria-hidden="true"></i>
+                <p>Video games</p>
+              </li>
+              <li>
+                <i class="fa fa-shower" aria-hidden="true"></i>
+                <p>Shower</p>
+              </li>
+              <li>
+                <i class="fa fa-fire" aria-hidden="true"></i>
+                <p>Litness</p>
+              </li>
+              <li>
+                <i class="fa fa-tv" aria-hidden="true"></i>
+                <p>TV</p>
+              </li>
+              <li>
+                <i class="fa fa-paw" aria-hidden="true"></i>
+                <p>Pet friendly</p>
+              </li>
             </ul>
           </div>
   
@@ -207,9 +237,18 @@
         <div class="amenities">
             <h2>Amenities</h2>
             <ul>
-              <li>Bar</li>
-              <li>Supermarket</li>
-              <li>KFC</li>
+              <li>
+                <i class="fa fa-wifi" aria-hidden="true"></i>
+                <p>Wifi</p>
+              </li>
+              <li>
+                <i class="fa fa-paw" aria-hidden="true"></i>
+                <p>Pet friendly</p>
+              </li>
+              <li>
+                <i class="fa fa-tv" aria-hidden="true"></i>
+                <p>TV</p>
+              </li>
             </ul>
           </div>
   
@@ -264,8 +303,18 @@
         <div class="amenities">
             <h2>Amenities</h2>
             <ul>
-              <li>Swimming Pool</li>
-              <li>Bar</li>
+              <li>
+                <i class="fa fa-coffee" aria-hidden="true"></i>
+                <p>Coffee machine</p>
+              </li>
+              <li>
+                <i class="fa fa-tv" aria-hidden="true"></i>
+                <p>TV</p>
+              </li>
+              <li>
+                <i class="fa fa-wifi" aria-hidden="true"></i>
+                <p>Wifi</p>
+              </li>
             </ul>
           </div>
   
