--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>AirBnB clone</title>
   <link rel="icon" href="images/icon.png">
   <link rel="stylesheet" href="styles/default.css">
@@ -90,11 +89,20 @@
           Chef Available
         </div>
         <div class="amenities">
-            <h2>Amenities</h2>
+            <h2><b>Amenities</b></h2>
             <ul>
-              <li>Java House</li>
-              <li>Bar</li>
-              <li>Casino</li>
+              <li>
+                <i class="fa fa-gamepad" aria-hidden="true"></i>
+                <p>Video games</p>
+              </li>
+              <li>
+                <i class="fa fa-shower" aria-hidden="true"></i>
+                <p>Shower</p>
+              </li>
+              <li>
+                <i class="fa fa-tv" aria-hidden="true"></i>
+                <p>TV</p>
+              </li>
             </ul>
           </div>
   
@@ -147,11 +155,32 @@
           Near Game park
         </div>
         <div class="amenities">
-            <h2>Amenities</h2>
+            <h2><b>Amenities</b></h2>
             <ul>
-              <li>Gym</li>
-              <li>Sauna</li>
-              <li>Theater</li>
+              <li>
+                <i class="fa fa-wifi" aria-hidden="true"></i>
+                <p>Wifi</p>
+              </li>
+              <li>
+                <i class="fa fa-gamepad" aria-hidden="true"></i>
+                <p>Video games</p>
+              </li>
+              <li>
+                <i class="fa fa-shower" aria-hidden="true"></i>
+                <p>Shower</p>
+              </li>
+              <li>
+                <i class="fa fa-fire" aria-hidden="true"></i>
+                <p>Litness</p>
+              </li>
+              <li>
+                <i class="fa fa-tv" aria-hidden="true"></i>
+                <p>TV</p>
+              </li>
+              <li>
+                <i class="fa fa-paw" aria-hidden="true"></i>
+                <p>Pet friendly</p>
+              </li>
             </ul>
           </div>
   
@@ -208,9 +237,18 @@
         <div class="amenities">
             <h2>Amenities</h2>
             <ul>
-              <li>Bar</li>
-              <li>Supermarket</li>
-              <li>KFC</li>
+              <li>
+                <i class="fa fa-wifi" aria-hidden="true"></i>
+                <p>Wifi</p>
+              </li>
+              <li>
+                <i class="fa fa-paw" aria-hidden="true"></i>
+                <p>Pet friendly</p>
+              </li>
+              <li>
+                <i class="fa fa-tv" aria-hidden="true"></i>
+                <p>TV</p>
+              </li>
             </ul>
           </div>
   
@@ -265,8 +303,18 @@
         <div class="amenities">
             <h2>Amenities</h2>
             <ul>
-              <li>Swimming Pool</li>
-              <li>Bar</li>
+              <li>
+                <i class="fa fa-coffee" aria-hidden="true"></i>
+                <p>Coffee machine</p>
+              </li>
+              <li>
+                <i class="fa fa-tv" aria-hidden="true"></i>
+                <p>TV</p>
+              </li>
+              <li>
+                <i class="fa fa-wifi" aria-hidden="true"></i>
+                <p>Wifi</p>
+              </li>
             </ul>
           </div>
   
